# kforce

./: .coverage  .drone.yml  .editorconfig  .gitattributes  .gitignore  .style.yapf  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  aws_facts.py  conftest.py  renderer.py  setup.cfg  setup.py  utils.py
.mypy_cache/3.6/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mypy_extensions.data.json  mypy_extensions.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
__generated__/: domainnonprod-s.yaml
htmlcov/: index.html  lib_aws_facts_py.html  lib_renderer_py.html  lib_utils_py.html  status.json
kforce/: __init__.py  aws_facts.py  cache.py  commands.py  pre_steps.py  renderer.py
kforce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kforce/raw_templates/: cluster.yaml  values.yaml.j2
kforce/raw_templates/snippets/: gpu.yaml
lib/: renderer.py  utils.py
raw_templates/: cluster.yaml  values.yaml.j2
requirements/: base.txt  dev.txt
tests/integration/: test_commands.py
tests/unit/: test_aws_facts.py  test_command.py  test_commands.py
vars/domainnonprod/: s.yaml
