[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party = awacs
known_first_party =
multi_line_output = 5
not_skip = __init__.py
known_standard_library = json
skip =

[coverage:run]
omit =

[coverage:report]
fail_under = 1

[metadata]
description-file = README.md
